--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="author" content="Codify Academy">
 		<meta name="description" content="Codify Academy Week 3 Intermediate Project - PSD Website Replication">
+		<link rel="shortcut icon" href="favicon.ico">
 		<title>Intermediate PSD Website Replication - Week 3 - Codify Academy</title>
 		<link href='http://fonts.googleapis.com/css?family=Nunito:400|Raleway' rel='stylesheet'>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
